# LoopAi

./: README.md  main.py  pyproject.toml  start.sh  tts_service.py
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: agent.baml  clients.baml
docs/: api_keys.md  architecture.md  assignment.md
frontend/: index.html  script.js  styles.css
